# python-flask-monorepo

./: README.md  docker-compose.yml
lib/gvd-lib-1/: setup.py
lib/gvd-lib-1/gvd_lib_1/: __init__.py
lib/gvd-lib-2/: setup.py
lib/gvd-lib-2/gvd_lib_2/: __init__.py
services/gvd-api-a/: Dockerfile  entrypoint.sh  pyproject.toml
services/gvd-api-a/gvd_api_a/: __init__.py
services/gvd-api-b/: Dockerfile  entrypoint.sh  pyproject.toml
services/gvd-api-b/gvd_api_b/: __init__.py
