[tool.poetry]
name = "gvd-api-a"
version = "1.0.0"
description = "Sample API a"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
gvd-lib-1 = { path = "../../lib/gvd-lib-1/", develop = false }
gvd-lib-2 = { path = "../../lib/gvd-lib-2/", develop = false }
Flask = "2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
